[package]
name = "dagr_game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
dagr-lib = {path = "../dagr/dagr-lib"}
hecs = "0.10.5"
rand = "0.9.2"
serde_json = "1.0.145"
tokio = "1.48.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.20", features = ["env-filter"]}
